src/Part_3/Symbol_Table/parserast.output
State 22 conflicts: 6 shift/reduce
State 32 conflicts: 1 reduce/reduce
State 47 conflicts: 2 shift/reduce
State 149 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: TK_BEGIN TK_PROGRAM TK_COLON program_body TK_END TK_PROGRAM
    2        | error

    3 program_body: var_decl_section
    4             | var_decl_section main_section

    5 main_section: statement_list
    6             | TK_BEGIN TK_MAIN TK_COLON statement_list TK_END TK_MAIN

    7 var_decl_section: TK_BEGIN TK_VARDECL TK_COLON var_decl_list TK_END TK_VARDECL
    8                 | TK_BEGIN TK_VARDECL TK_COLON TK_END TK_VARDECL

    9 var_decl_list: var_decl
   10              | var_decl_list var_decl
   11              | error

   12 var_decl: LPAREN IDENTIFIER COMMA type RPAREN TK_SEP

   13 type: TK_INT
   14     | TK_CHAR
   15     | IDENTIFIER

   16 statement_list: statement
   17               | statement statement_list

   18 statement: expression_statement
   19          | print_statement
   20          | scan_statement
   21          | compound_statement
   22          | selection_statement
   23          | iteration_statement
   24          | conditional_statement

   25 conditional_statement: IDENTIFIER GE INTEGER_CONST
   26                      | IDENTIFIER EQ INTEGER_CONST
   27                      | IDENTIFIER GT INTEGER_CONST
   28                      | IDENTIFIER LE INTEGER_CONST
   29                      | IDENTIFIER LT INTEGER_CONST
   30                      | IDENTIFIER NE INTEGER_CONST

   31 expression_statement: expression TK_SEP
   32                     | TK_SEP

   33 print_statement: TK_PRINT LPAREN STRING_LITERAL optional_print_args RPAREN TK_SEP

   34 optional_print_args: /* empty */
   35                    | COMMA print_arg_list

   36 print_arg_list: expression
   37               | print_arg_list COMMA expression

   38 scan_statement: TK_SCAN LPAREN STRING_LITERAL COMMA id_list RPAREN TK_SEP

   39 id_list: IDENTIFIER
   40        | id_list COMMA IDENTIFIER

   41 compound_statement: TK_BLOCKBEGIN statement_list TK_END

   42 selection_statement: TK_IF ifexpr compound_statement TK_SEP
   43                    | TK_IF ifexpr compound_statement TK_ELSE compound_statement TK_SEP
   44                    | TK_IF LPAREN ifexpr RPAREN compound_statement TK_SEP
   45                    | TK_IF LPAREN ifexpr RPAREN compound_statement TK_ELSE compound_statement TK_SEP

   46 ifexpr: INTEGER_CONST
   47       | IDENTIFIER
   48       | conditional_statement

   49 iteration_statement: TK_WHILE LPAREN expression RPAREN TK_DO compound_statement TK_SEP
   50                    | TK_WHILE expression TK_DO compound_statement TK_SEP
   51                    | TK_WHILE LPAREN expression RPAREN compound_statement TK_SEP
   52                    | TK_WHILE expression compound_statement TK_SEP
   53                    | TK_FOR LPAREN IDENTIFIER ASSIGN expression TK_TO expression RPAREN TK_DO compound_statement TK_SEP
   54                    | TK_FOR LPAREN IDENTIFIER ASSIGN expression TK_TO expression TK_INC expression RPAREN TK_DO compound_statement TK_SEP
   55                    | TK_FOR LPAREN IDENTIFIER ASSIGN expression TK_TO expression TK_DEC expression RPAREN TK_DO compound_statement TK_SEP
   56                    | TK_FOR IDENTIFIER ASSIGN expression TK_TO expression TK_DO compound_statement TK_SEP
   57                    | TK_FOR IDENTIFIER ASSIGN expression TK_TO expression TK_INC expression TK_DO compound_statement TK_SEP
   58                    | TK_FOR IDENTIFIER ASSIGN expression TK_TO expression TK_DEC expression TK_DO compound_statement TK_SEP
   59                    | TK_DO statement TK_WHILE LPAREN expression RPAREN TK_SEP

   60 expression: assignment_expression
   61           | conditional_statement

   62 assignment_expression: equality_expression
   63                      | IDENTIFIER assignment_operator assignment_expression

   64 assignment_operator: ASSIGN
   65                    | PLUS_ASSIGN
   66                    | MINUS_ASSIGN
   67                    | MULT_ASSIGN
   68                    | DIV_ASSIGN
   69                    | MOD_ASSIGN

   70 equality_expression: relational_expression equality_expression_tail

   71 equality_expression_tail: /* empty */
   72                         | EQ relational_expression
   73                         | NE relational_expression

   74 relational_expression: additive_expression relational_expression_tail

   75 relational_expression_tail: /* empty */
   76                           | LT additive_expression
   77                           | GT additive_expression
   78                           | LE additive_expression
   79                           | GE additive_expression

   80 additive_expression: multiplicative_expression additive_expression_tail

   81 additive_expression_tail: /* empty */
   82                         | PLUS multiplicative_expression additive_expression_tail
   83                         | MINUS multiplicative_expression additive_expression_tail

   84 multiplicative_expression: unary_expression multiplicative_expression_tail

   85 multiplicative_expression_tail: /* empty */
   86                               | MULT unary_expression multiplicative_expression_tail
   87                               | DIV unary_expression multiplicative_expression_tail
   88                               | MOD unary_expression multiplicative_expression_tail

   89 unary_expression: postfix_expression
   90                 | PLUS unary_expression
   91                 | MINUS unary_expression
   92                 | TK_INC unary_expression
   93                 | TK_DEC unary_expression

   94 postfix_expression: primary_expression postfix_expression_tail

   95 postfix_expression_tail: /* empty */
   96                        | TK_INC
   97                        | TK_DEC

   98 primary_expression: IDENTIFIER
   99                   | INTEGER_CONST
  100                   | CHAR_CONST
  101                   | LPAREN expression RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256) 2 11
TK_BEGIN (258) 1 6 7 8
TK_END (259) 1 6 7 8 41
TK_PROGRAM (260) 1
TK_VARDECL (261) 7 8
TK_INT (262) 13
TK_CHAR (263) 14
TK_COLON (264) 1 6 7 8
TK_SEP (265) 12 31 32 33 38 42 43 44 45 49 50 51 52 53 54 55 56 57
    58 59
TK_IF (266) 42 43 44 45
TK_ELSE (267) 43 45
TK_WHILE (268) 49 50 51 52 59
TK_FOR (269) 53 54 55 56 57 58
TK_DO (270) 49 50 53 54 55 56 57 58 59
TK_TO (271) 53 54 55 56 57 58
TK_INC (272) 54 57 92 96
TK_DEC (273) 55 58 93 97
TK_PRINT (274) 33
TK_SCAN (275) 38
TK_MAIN (276) 6
IDENTIFIER (277) 12 15 25 26 27 28 29 30 39 40 47 53 54 55 56 57 58
    63 98
INTEGER_CONST (278) 25 26 27 28 29 30 46 99
CHAR_CONST (279) 100
STRING_LITERAL (280) 33 38
LPAREN (281) 12 33 38 44 45 49 51 53 54 55 59 101
RPAREN (282) 12 33 38 44 45 49 51 53 54 55 59 101
COMMA (283) 12 35 37 38 40
PLUS (284) 82 90
MINUS (285) 83 91
MULT (286) 86
DIV (287) 87
MOD (288) 88
EQ (289) 26 72
GT (290) 27 77
LT (291) 29 76
GE (292) 25 79
LE (293) 28 78
NE (294) 30 73
ASSIGN (295) 53 54 55 56 57 58 64
PLUS_ASSIGN (296) 65
MINUS_ASSIGN (297) 66
MULT_ASSIGN (298) 67
DIV_ASSIGN (299) 68
MOD_ASSIGN (300) 69
TK_BLOCKBEGIN (301) 41
IFX (302)
UNARY (303)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1 2, on right: 0
program_body (51)
    on left: 3 4, on right: 1
main_section (52)
    on left: 5 6, on right: 4
var_decl_section (53)
    on left: 7 8, on right: 3 4
var_decl_list (54)
    on left: 9 10 11, on right: 7 10
var_decl (55)
    on left: 12, on right: 9 10
type (56)
    on left: 13 14 15, on right: 12
statement_list (57)
    on left: 16 17, on right: 5 6 17 41
statement (58)
    on left: 18 19 20 21 22 23 24, on right: 16 17 59
conditional_statement (59)
    on left: 25 26 27 28 29 30, on right: 24 48 61
expression_statement (60)
    on left: 31 32, on right: 18
print_statement (61)
    on left: 33, on right: 19
optional_print_args (62)
    on left: 34 35, on right: 33
print_arg_list (63)
    on left: 36 37, on right: 35 37
scan_statement (64)
    on left: 38, on right: 20
id_list (65)
    on left: 39 40, on right: 38 40
compound_statement (66)
    on left: 41, on right: 21 42 43 44 45 49 50 51 52 53 54 55 56 57
    58
selection_statement (67)
    on left: 42 43 44 45, on right: 22
ifexpr (68)
    on left: 46 47 48, on right: 42 43 44 45
iteration_statement (69)
    on left: 49 50 51 52 53 54 55 56 57 58 59, on right: 23
expression (70)
    on left: 60 61, on right: 31 36 37 49 50 51 52 53 54 55 56 57 58
    59 101
assignment_expression (71)
    on left: 62 63, on right: 60 63
assignment_operator (72)
    on left: 64 65 66 67 68 69, on right: 63
equality_expression (73)
    on left: 70, on right: 62
equality_expression_tail (74)
    on left: 71 72 73, on right: 70
relational_expression (75)
    on left: 74, on right: 70 72 73
relational_expression_tail (76)
    on left: 75 76 77 78 79, on right: 74
additive_expression (77)
    on left: 80, on right: 74 76 77 78 79
additive_expression_tail (78)
    on left: 81 82 83, on right: 80 82 83
multiplicative_expression (79)
    on left: 84, on right: 80 82 83
multiplicative_expression_tail (80)
    on left: 85 86 87 88, on right: 84 86 87 88
unary_expression (81)
    on left: 89 90 91 92 93, on right: 84 86 87 88 90 91 92 93
postfix_expression (82)
    on left: 94, on right: 89
postfix_expression_tail (83)
    on left: 95 96 97, on right: 94
primary_expression (84)
    on left: 98 99 100 101, on right: 94


state 0

    0 $accept: . program $end

    error     shift, and go to state 1
    TK_BEGIN  shift, and go to state 2

    program  go to state 3


state 1

    2 program: error .

    $default  reduce using rule 2 (program)


state 2

    1 program: TK_BEGIN . TK_PROGRAM TK_COLON program_body TK_END TK_PROGRAM

    TK_PROGRAM  shift, and go to state 4


state 3

    0 $accept: program . $end

    $end  shift, and go to state 5


state 4

    1 program: TK_BEGIN TK_PROGRAM . TK_COLON program_body TK_END TK_PROGRAM

    TK_COLON  shift, and go to state 6


state 5

    0 $accept: program $end .

    $default  accept


state 6

    1 program: TK_BEGIN TK_PROGRAM TK_COLON . program_body TK_END TK_PROGRAM

    TK_BEGIN  shift, and go to state 7

    program_body      go to state 8
    var_decl_section  go to state 9


state 7

    7 var_decl_section: TK_BEGIN . TK_VARDECL TK_COLON var_decl_list TK_END TK_VARDECL
    8                 | TK_BEGIN . TK_VARDECL TK_COLON TK_END TK_VARDECL

    TK_VARDECL  shift, and go to state 10


state 8

    1 program: TK_BEGIN TK_PROGRAM TK_COLON program_body . TK_END TK_PROGRAM

    TK_END  shift, and go to state 11


state 9

    3 program_body: var_decl_section .
    4             | var_decl_section . main_section

    TK_BEGIN       shift, and go to state 12
    TK_SEP         shift, and go to state 13
    TK_IF          shift, and go to state 14
    TK_WHILE       shift, and go to state 15
    TK_FOR         shift, and go to state 16
    TK_DO          shift, and go to state 17
    TK_INC         shift, and go to state 18
    TK_DEC         shift, and go to state 19
    TK_PRINT       shift, and go to state 20
    TK_SCAN        shift, and go to state 21
    IDENTIFIER     shift, and go to state 22
    INTEGER_CONST  shift, and go to state 23
    CHAR_CONST     shift, and go to state 24
    LPAREN         shift, and go to state 25
    PLUS           shift, and go to state 26
    MINUS          shift, and go to state 27
    TK_BLOCKBEGIN  shift, and go to state 28

    $default  reduce using rule 3 (program_body)

    main_section               go to state 29
    statement_list             go to state 30
    statement                  go to state 31
    conditional_statement      go to state 32
    expression_statement       go to state 33
    print_statement            go to state 34
    scan_statement             go to state 35
    compound_statement         go to state 36
    selection_statement        go to state 37
    iteration_statement        go to state 38
    expression                 go to state 39
    assignment_expression      go to state 40
    equality_expression        go to state 41
    relational_expression      go to state 42
    additive_expression        go to state 43
    multiplicative_expression  go to state 44
    unary_expression           go to state 45
    postfix_expression         go to state 46
    primary_expression         go to state 47


state 10

    7 var_decl_section: TK_BEGIN TK_VARDECL . TK_COLON var_decl_list TK_END TK_VARDECL
    8                 | TK_BEGIN TK_VARDECL . TK_COLON TK_END TK_VARDECL

    TK_COLON  shift, and go to state 48


state 11

    1 program: TK_BEGIN TK_PROGRAM TK_COLON program_body TK_END . TK_PROGRAM

    TK_PROGRAM  shift, and go to state 49


state 12

    6 main_section: TK_BEGIN . TK_MAIN TK_COLON statement_list TK_END TK_MAIN

    TK_MAIN  shift, and go to state 50


state 13

   32 expression_statement: TK_SEP .

    $default  reduce using rule 32 (expression_statement)


state 14

   42 selection_statement: TK_IF . ifexpr compound_statement TK_SEP
   43                    | TK_IF . ifexpr compound_statement TK_ELSE compound_statement TK_SEP
   44                    | TK_IF . LPAREN ifexpr RPAREN compound_statement TK_SEP
   45                    | TK_IF . LPAREN ifexpr RPAREN compound_statement TK_ELSE compound_statement TK_SEP

    IDENTIFIER     shift, and go to state 51
    INTEGER_CONST  shift, and go to state 52
    LPAREN         shift, and go to state 53

    conditional_statement  go to state 54
    ifexpr                 go to state 55


state 15

   49 iteration_statement: TK_WHILE . LPAREN expression RPAREN TK_DO compound_statement TK_SEP
   50                    | TK_WHILE . expression TK_DO compound_statement TK_SEP
   51                    | TK_WHILE . LPAREN expression RPAREN compound_statement TK_SEP
   52                    | TK_WHILE . expression compound_statement TK_SEP

    TK_INC         shift, and go to state 18
    TK_DEC         shift, and go to state 19
    IDENTIFIER     shift, and go to state 22
    INTEGER_CONST  shift, and go to state 23
    CHAR_CONST     shift, and go to state 24
    LPAREN         shift, and go to state 56
    PLUS           shift, and go to state 26
    MINUS          shift, and go to state 27

    conditional_statement      go to state 57
    expression                 go to state 58
    assignment_expression      go to state 40
    equality_expression        go to state 41
    relational_expression      go to state 42
    additive_expression        go to state 43
    multiplicative_expression  go to state 44
    unary_expression           go to state 45
    postfix_expression         go to state 46
    primary_expression         go to state 47


state 16

   53 iteration_statement: TK_FOR . LPAREN IDENTIFIER ASSIGN expression TK_TO expression RPAREN TK_DO compound_statement TK_SEP
   54                    | TK_FOR . LPAREN IDENTIFIER ASSIGN expression TK_TO expression TK_INC expression RPAREN TK_DO compound_statement TK_SEP
   55                    | TK_FOR . LPAREN IDENTIFIER ASSIGN expression TK_TO expression TK_DEC expression RPAREN TK_DO compound_statement TK_SEP
   56                    | TK_FOR . IDENTIFIER ASSIGN expression TK_TO expression TK_DO compound_statement TK_SEP
   57                    | TK_FOR . IDENTIFIER ASSIGN expression TK_TO expression TK_INC expression TK_DO compound_statement TK_SEP
   58                    | TK_FOR . IDENTIFIER ASSIGN expression TK_TO expression TK_DEC expression TK_DO compound_statement TK_SEP

    IDENTIFIER  shift, and go to state 59
    LPAREN      shift, and go to state 60


state 17

   59 iteration_statement: TK_DO . statement TK_WHILE LPAREN expression RPAREN TK_SEP

    TK_SEP         shift, and go to state 13
    TK_IF          shift, and go to state 14
    TK_WHILE       shift, and go to state 15
    TK_FOR         shift, and go to state 16
    TK_DO          shift, and go to state 17
    TK_INC         shift, and go to state 18
    TK_DEC         shift, and go to state 19
    TK_PRINT       shift, and go to state 20
    TK_SCAN        shift, and go to state 21
    IDENTIFIER     shift, and go to state 22
    INTEGER_CONST  shift, and go to state 23
    CHAR_CONST     shift, and go to state 24
    LPAREN         shift, and go to state 25
    PLUS           shift, and go to state 26
    MINUS          shift, and go to state 27
    TK_BLOCKBEGIN  shift, and go to state 28

    statement                  go to state 61
    conditional_statement      go to state 32
    expression_statement       go to state 33
    print_statement            go to state 34
    scan_statement             go to state 35
    compound_statement         go to state 36
    selection_statement        go to state 37
    iteration_statement        go to state 38
    expression                 go to state 39
    assignment_expression      go to state 40
    equality_expression        go to state 41
    relational_expression      go to state 42
    additive_expression        go to state 43
    multiplicative_expression  go to state 44
    unary_expression           go to state 45
    postfix_expression         go to state 46
    primary_expression         go to state 47


state 18

   92 unary_expression: TK_INC . unary_expression

    TK_INC         shift, and go to state 18
    TK_DEC         shift, and go to state 19
    IDENTIFIER     shift, and go to state 62
    INTEGER_CONST  shift, and go to state 23
    CHAR_CONST     shift, and go to state 24
    LPAREN         shift, and go to state 25
    PLUS           shift, and go to state 26
    MINUS          shift, and go to state 27

    unary_expression    go to state 63
    postfix_expression  go to state 46
    primary_expression  go to state 47


state 19

   93 unary_expression: TK_DEC . unary_expression

    TK_INC         shift, and go to state 18
    TK_DEC         shift, and go to state 19
    IDENTIFIER     shift, and go to state 62
    INTEGER_CONST  shift, and go to state 23
    CHAR_CONST     shift, and go to state 24
    LPAREN         shift, and go to state 25
    PLUS           shift, and go to state 26
    MINUS          shift, and go to state 27

    unary_expression    go to state 64
    postfix_expression  go to state 46
    primary_expression  go to state 47


state 20

   33 print_statement: TK_PRINT . LPAREN STRING_LITERAL optional_print_args RPAREN TK_SEP

    LPAREN  shift, and go to state 65


state 21

   38 scan_statement: TK_SCAN . LPAREN STRING_LITERAL COMMA id_list RPAREN TK_SEP

    LPAREN  shift, and go to state 66


state 22

   25 conditional_statement: IDENTIFIER . GE INTEGER_CONST
   26                      | IDENTIFIER . EQ INTEGER_CONST
   27                      | IDENTIFIER . GT INTEGER_CONST
   28                      | IDENTIFIER . LE INTEGER_CONST
   29                      | IDENTIFIER . LT INTEGER_CONST
   30                      | IDENTIFIER . NE INTEGER_CONST
   63 assignment_expression: IDENTIFIER . assignment_operator assignment_expression
   98 primary_expression: IDENTIFIER .

    EQ            shift, and go to state 67
    GT            shift, and go to state 68
    LT            shift, and go to state 69
    GE            shift, and go to state 70
    LE            shift, and go to state 71
    NE            shift, and go to state 72
    ASSIGN        shift, and go to state 73
    PLUS_ASSIGN   shift, and go to state 74
    MINUS_ASSIGN  shift, and go to state 75
    MULT_ASSIGN   shift, and go to state 76
    DIV_ASSIGN    shift, and go to state 77
    MOD_ASSIGN    shift, and go to state 78

    EQ        [reduce using rule 98 (primary_expression)]
    GT        [reduce using rule 98 (primary_expression)]
    LT        [reduce using rule 98 (primary_expression)]
    GE        [reduce using rule 98 (primary_expression)]
    LE        [reduce using rule 98 (primary_expression)]
    NE        [reduce using rule 98 (primary_expression)]
    $default  reduce using rule 98 (primary_expression)

    assignment_operator  go to state 79


state 23

   99 primary_expression: INTEGER_CONST .

    $default  reduce using rule 99 (primary_expression)


state 24

  100 primary_expression: CHAR_CONST .

    $default  reduce using rule 100 (primary_expression)


state 25

  101 primary_expression: LPAREN . expression RPAREN

    TK_INC         shift, and go to state 18
    TK_DEC         shift, and go to state 19
    IDENTIFIER     shift, and go to state 22
    INTEGER_CONST  shift, and go to state 23
    CHAR_CONST     shift, and go to state 24
    LPAREN         shift, and go to state 25
    PLUS           shift, and go to state 26
    MINUS          shift, and go to state 27

    conditional_statement      go to state 57
    expression                 go to state 80
    assignment_expression      go to state 40
    equality_expression        go to state 41
    relational_expression      go to state 42
    additive_expression        go to state 43
    multiplicative_expression  go to state 44
    unary_expression           go to state 45
    postfix_expression         go to state 46
    primary_expression         go to state 47


state 26

   90 unary_expression: PLUS . unary_expression

    TK_INC         shift, and go to state 18
    TK_DEC         shift, and go to state 19
    IDENTIFIER     shift, and go to state 62
    INTEGER_CONST  shift, and go to state 23
    CHAR_CONST     shift, and go to state 24
    LPAREN         shift, and go to state 25
    PLUS           shift, and go to state 26
    MINUS          shift, and go to state 27

    unary_expression    go to state 81
    postfix_expression  go to state 46
    primary_expression  go to state 47


state 27

   91 unary_expression: MINUS . unary_expression

    TK_INC         shift, and go to state 18
    TK_DEC         shift, and go to state 19
    IDENTIFIER     shift, and go to state 62
    INTEGER_CONST  shift, and go to state 23
    CHAR_CONST     shift, and go to state 24
    LPAREN         shift, and go to state 25
    PLUS           shift, and go to state 26
    MINUS          shift, and go to state 27

    unary_expression    go to state 82
    postfix_expression  go to state 46
    primary_expression  go to state 47


state 28

   41 compound_statement: TK_BLOCKBEGIN . statement_list TK_END

    TK_SEP         shift, and go to state 13
    TK_IF          shift, and go to state 14
    TK_WHILE       shift, and go to state 15
    TK_FOR         shift, and go to state 16
    TK_DO          shift, and go to state 17
    TK_INC         shift, and go to state 18
    TK_DEC         shift, and go to state 19
    TK_PRINT       shift, and go to state 20
    TK_SCAN        shift, and go to state 21
    IDENTIFIER     shift, and go to state 22
    INTEGER_CONST  shift, and go to state 23
    CHAR_CONST     shift, and go to state 24
    LPAREN         shift, and go to state 25
    PLUS           shift, and go to state 26
    MINUS          shift, and go to state 27
    TK_BLOCKBEGIN  shift, and go to state 28
